--- a/index.html
+++ b/index.html
@@ -17,15 +17,90 @@
     <title>Frontend Mentor | Single-page design portfolio</title>
   </head>
   <body>
-    Free Consultation Design solutions made easy With over ten years of
-    experience in various design disciplines, I’m your one-stop shop for your
-    design needs. Graphic Design UI/UX Apps Photography Illustrations Motion
-    Graphics I’m Amy, and I’d love to work on your next project I love working
-    with others to create beautiful design solutions. I’ve designed everything
-    from brand illustrations to complete mobile apps. I’m also handy with a
-    camera! Free Consultation My Work Book a call with me I’d love to have a
-    chat to see how I can help you. The best first step is for us to discuss
-    your project during a free consultation. Then we can move forward from
-    there. Free Consultation Free Consultation
+    <header>
+      <img src="./assets/logo.svg" alt="circle" />
+      <button>Free Consultation</button>
+    </header>
+    <main>
+      <div>
+        <h1>Design solutions made easy</h1>
+        <p>
+          With over ten years of experience in various design disciplines, I’m
+          your one-stop shop for your design needs.
+        </p>
+      </div>
+      <div>
+        <div>
+          <img src="./assets/pattern-graphic-design.svg" alt="grapic-desing" />
+          <p>Graphic Design</p>
+        </div>
+        <div>
+          <img src="./assets/pattern-ui-ux.svg" alt="ui-ux" />
+          <p>UI/UX</p>
+        </div>
+        <div>
+          <img src="./assets/pattern-apps.svg" alt="apps" />
+          <p>Apps</p>
+        </div>
+        <div>
+          <img src="./assets/pattern-illustrations.svg" alt="illustrations" />
+          <p>Illustrations</p>
+        </div>
+        <div>
+          <img src="./assets/pattern-photography.svg" alt="Photography" />
+          <p>Photography</p>
+        </div>
+        <div>
+          <img
+            src="./assets/pattern-motion-graphics.svg"
+            alt="motion-graphics" />
+          <p>Motion Graphics</p>
+        </div>
+      </div>
+      <div>
+        <img src="./assets/image-amy.webp" alt="woman in a blue dress shirt" />
+        <div>
+          <h2>I’m Amy, and I’d love to work on your next project</h2>
+          <p>
+            I love working with others to create beautiful design solutions.
+            I’ve designed everything from brand illustrations to complete mobile
+            apps. I’m also handy with a camera!
+          </p>
+          <button>Free Consultation</button>
+        </div>
+      </div>
+      <div>
+        <h2>My Work</h2>
+        <div>
+          <img src="./assets/image-slide-1.jpg" alt="image-slide-1" />
+          <img src="./assets/image-slide-2.jpg" alt="image-slide-2" />
+          <img src="./assets/image-slide-3.jpg" alt="image-slide-3" />
+          <img src="./assets/image-slide-4.jpg" alt="image-slide-4" />
+          <img src="./assets/image-slide-5.jpg" alt="image-slide-5" />
+        </div>
+        <div>
+          <button>
+            <img src="./assets/icon-arrow-left.svg" alt="left arrow" />
+          </button>
+          <button>
+            <img src="./assets/icon-arrow-right.svg" alt="right arrow" />
+          </button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Book a call with me</h2>
+        <p>
+          I’d love to have a chat to see how I can help you. The best first step
+          is for us to discuss your project during a free consultation. Then we
+          can move forward from there.
+        </p>
+        <button>Free Consultation</button>
+      </div>
+    </main>
+    <footer>
+      <img src="./assets/logo.svg" alt="circle" />
+      <button>Free Consultation</button>
+    </footer>
   </body>
 </html>
