mobile header styling

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
     <title>Frontend Mentor | Single-page design portfolio</title>
   </head>
-  <body>
-    <header>
+  <body class="plus-jakarta-sans-medium">
+    <header class="consultation-container">
       <img src="./assets/logo.svg" alt="circle" />
-      <button>Free Consultation</button>
+      <button class="consult-btn plus-jakarta-sans-bold">
+        Free Consultation
+      </button>
     </header>
     <main>
       <div>
@@ -98,7 +100,7 @@
         <button>Free Consultation</button>
       </div>
     </main>
-    <footer>
+    <footer class="consultation-container">
       <img src="./assets/logo.svg" alt="circle" />
       <button>Free Consultation</button>
     </footer>
