mobile hero section styling

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </button>
     </header>
     <main>
-      <div>
+      <div class="hero-section">
         <h1>Design solutions made easy</h1>
-        <p>
+        <p class="plus-jakarta-sans-medium">
           With over ten years of experience in various design disciplines, I’m
           your one-stop shop for your design needs.
         </p>
