mobile grid tiles styling

--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
           your one-stop shop for your design needs.
         </p>
       </div>
-      <div>
-        <div>
+      <div class="grid-sqts plus-jakarta-sans-bold">
+        <div class="graphic-design">
           <img src="./assets/pattern-graphic-design.svg" alt="grapic-desing" />
           <p>Graphic Design</p>
         </div>
-        <div>
+        <div class="ui">
           <img src="./assets/pattern-ui-ux.svg" alt="ui-ux" />
           <p>UI/UX</p>
         </div>
-        <div>
+        <div class="apps">
           <img src="./assets/pattern-apps.svg" alt="apps" />
           <p>Apps</p>
         </div>
-        <div>
+        <div class="illustrations">
           <img src="./assets/pattern-illustrations.svg" alt="illustrations" />
           <p>Illustrations</p>
         </div>
-        <div>
+        <div class="photography">
           <img src="./assets/pattern-photography.svg" alt="Photography" />
           <p>Photography</p>
         </div>
-        <div>
+        <div class="motion-graphics">
           <img
             src="./assets/pattern-motion-graphics.svg"
             alt="motion-graphics" />
