mobile intro section styling

--- a/index.html
+++ b/index.html
@@ -59,16 +59,18 @@
           <p>Motion Graphics</p>
         </div>
       </div>
-      <div>
+      <div class="intro-section">
         <img src="./assets/image-amy.webp" alt="woman in a blue dress shirt" />
         <div>
-          <h2>I’m Amy, and I’d love to work on your next project</h2>
+          <h2 class="plus-jakarta-sans-bold">
+            I’m Amy, and I’d love to work on your next project
+          </h2>
           <p>
             I love working with others to create beautiful design solutions.
             I’ve designed everything from brand illustrations to complete mobile
             apps. I’m also handy with a camera!
           </p>
-          <button>Free Consultation</button>
+          <button class="consult-btn">Free Consultation</button>
         </div>
       </div>
       <div>
