layout slider for mobile

--- a/index.html
+++ b/index.html
@@ -70,17 +70,21 @@
             I’ve designed everything from brand illustrations to complete mobile
             apps. I’m also handy with a camera!
           </p>
-          <button class="consult-btn">Free Consultation</button>
+          <button class="consult-btn plus-jakarta-sans-bold">
+            Free Consultation
+          </button>
         </div>
       </div>
-      <div>
+      <div class="work-section">
         <h2>My Work</h2>
-        <div>
-          <img src="./assets/image-slide-1.jpg" alt="image-slide-1" />
-          <img src="./assets/image-slide-2.jpg" alt="image-slide-2" />
-          <img src="./assets/image-slide-3.jpg" alt="image-slide-3" />
-          <img src="./assets/image-slide-4.jpg" alt="image-slide-4" />
-          <img src="./assets/image-slide-5.jpg" alt="image-slide-5" />
+        <div class="slider">
+          <div>
+            <img src="./assets/image-slide-1.jpg" alt="image-slide-1" />
+            <img src="./assets/image-slide-2.jpg" alt="image-slide-2" />
+            <img src="./assets/image-slide-3.jpg" alt="image-slide-3" />
+            <img src="./assets/image-slide-4.jpg" alt="image-slide-4" />
+            <img src="./assets/image-slide-5.jpg" alt="image-slide-5" />
+          </div>
         </div>
         <div>
           <button>
