mobile work section styling

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="work-section">
-        <h2>My Work</h2>
+        <h2 class="plus-jakarta-sans-bold">My Work</h2>
         <div class="slider">
           <div>
             <img src="./assets/image-slide-1.jpg" alt="image-slide-1" />
@@ -86,7 +86,7 @@
             <img src="./assets/image-slide-5.jpg" alt="image-slide-5" />
           </div>
         </div>
-        <div>
+        <div class="arrows">
           <button>
             <img src="./assets/icon-arrow-left.svg" alt="left arrow" />
           </button>
