--- a/index.html
+++ b/index.html
@@ -96,19 +96,21 @@
         </div>
       </div>
 
-      <div>
+      <div class="contact-section">
         <h2>Book a call with me</h2>
         <p>
           I’d love to have a chat to see how I can help you. The best first step
           is for us to discuss your project during a free consultation. Then we
           can move forward from there.
         </p>
-        <button>Free Consultation</button>
+        <button class="consult-btn">Free Consultation</button>
       </div>
     </main>
     <footer class="consultation-container">
       <img src="./assets/logo.svg" alt="circle" />
-      <button>Free Consultation</button>
+      <button class="consult-btn plus-jakarta-sans-bold">
+        Free Consultation
+      </button>
     </footer>
   </body>
 </html>
