logic for img slider

--- a/index.html
+++ b/index.html
@@ -78,19 +78,36 @@
       <div class="work-section">
         <h2 class="plus-jakarta-sans-bold">My Work</h2>
         <div class="slider">
-          <div>
-            <img src="./assets/image-slide-1.jpg" alt="image-slide-1" />
-            <img src="./assets/image-slide-2.jpg" alt="image-slide-2" />
-            <img src="./assets/image-slide-3.jpg" alt="image-slide-3" />
-            <img src="./assets/image-slide-4.jpg" alt="image-slide-4" />
+          <div class="slider-imgs">
             <img src="./assets/image-slide-5.jpg" alt="image-slide-5" />
+            <img
+              data-img-num="1"
+              src="./assets/image-slide-1.jpg"
+              alt="image-slide-1" />
+            <img
+              data-img-num="1"
+              src="./assets/image-slide-2.jpg"
+              alt="image-slide-2" />
+            <img
+              data-img-num="1"
+              src="./assets/image-slide-3.jpg"
+              alt="image-slide-3" />
+            <img
+              data-img-num="1"
+              src="./assets/image-slide-4.jpg"
+              alt="image-slide-4" />
+            <img
+              data-img-num="1"
+              src="./assets/image-slide-5.jpg"
+              alt="image-slide-5" />
+            <img src="./assets/image-slide-1.jpg" alt="image-slide-1" />
           </div>
         </div>
         <div class="arrows">
-          <button>
+          <button data-value="-1">
             <img src="./assets/icon-arrow-left.svg" alt="left arrow" />
           </button>
-          <button>
+          <button data-value="1">
             <img src="./assets/icon-arrow-right.svg" alt="right arrow" />
           </button>
         </div>
