add loading lazy attribute

--- a/index.html
+++ b/index.html
@@ -79,24 +79,32 @@
         <h2 class="plus-jakarta-sans-bold">My Work</h2>
         <div class="slider">
           <div class="slider-imgs">
-            <img src="./assets/image-slide-5.jpg" alt="image-slide-5" />
             <img
+              src="./assets/image-slide-5.jpg"
+              alt="image-slide-5"
+              loading="lazy" />
+            <img
+              loading="lazy"
               data-img-num="1"
               src="./assets/image-slide-1.jpg"
               alt="image-slide-1" />
             <img
+              loading="lazy"
               data-img-num="1"
               src="./assets/image-slide-2.jpg"
               alt="image-slide-2" />
             <img
+              loading="lazy"
               data-img-num="1"
               src="./assets/image-slide-3.jpg"
               alt="image-slide-3" />
             <img
+              loading="lazy"
               data-img-num="1"
               src="./assets/image-slide-4.jpg"
               alt="image-slide-4" />
             <img
+              loading="lazy"
               data-img-num="1"
               src="./assets/image-slide-5.jpg"
               alt="image-slide-5" />
