remove lazy attri from ends of slider

--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
         <h2 class="plus-jakarta-sans-bold">My Work</h2>
         <div class="slider">
           <div class="slider-imgs">
-            <img
-              src="./assets/image-slide-5.jpg"
-              alt="image-slide-5"
-              loading="lazy" />
+            <img src="./assets/image-slide-5.jpg" alt="image-slide-5" />
             <img
               loading="lazy"
               data-img-num="1"
