desktop sizing done

--- a/index.html
+++ b/index.html
@@ -119,12 +119,14 @@
       </div>
 
       <div class="contact-section">
-        <h2>Book a call with me</h2>
-        <p>
-          I’d love to have a chat to see how I can help you. The best first step
-          is for us to discuss your project during a free consultation. Then we
-          can move forward from there.
-        </p>
+        <div>
+          <h2>Book a call with me</h2>
+          <p>
+            I’d love to have a chat to see how I can help you. The best first
+            step is for us to discuss your project during a free consultation.
+            Then we can move forward from there.
+          </p>
+        </div>
         <button class="consult-btn">Free Consultation</button>
       </div>
     </main>
