--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="work-section">
         <h2 class="plus-jakarta-sans-bold">My Work</h2>
         <div class="slider">
-          <div class="slider-imgs">
+          <div class="slider-imgs" tabindex="0">
             <img src="./assets/image-slide-5.jpg" alt="image-slide-5" />
             <img
               loading="lazy"
